Bugfix for particles being hidden by sidebar when it's on top (e.g. in mobile devices)

--- a/assets/css/liweiyap_ghpages.css
+++ b/assets/css/liweiyap_ghpages.css
@@ -91,6 +91,13 @@ tbody tr:nth-child(odd) th {
 .sidebar {
     text-align: center;
     color: rgba(238,238,238,.6);
+    position: relative;  /* fixes issue with particles in sidebar when latter is at the top (default value of sidebar::position is `static`) */
+}
+
+@media (min-width: 48em) {
+    .sidebar {
+        position: fixed;
+    }
 }
 
 .sidebar a {
@@ -453,16 +460,8 @@ span {
 
 #particles-js {
     position: absolute;
-    width: 0%;
-    height: 0%;
-}
-
-@media (min-width: 48em) {
-    #particles-js {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0px;
-        top: 0px;
-    }
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
 }
